tests/negative/regression/r19.orng
fn main() -> () { 
    let d: []{}
    _ = d
} 